# SLICUTLET

./: .gitignore  LICENSE  MB01XX_PHASE1_INVENTORY.md  README.md  claude.md  meson.build  meson_options.txt  pyproject.toml
.claude/: settings.local.json
.claude/skills/slicot-knowledge/: SKILL.md
.devcontainer/: README.md  devcontainer.json  setup.sh
.github/workflows/: build-wheels.yml  publish-pypi-token.yml  publish-pypi.yml  publish-testpypi.yml  test-linux-basic.yml  test-linux-conda.yml  test-macos.yml  test-matrix.yml  test-windows.yml
include/SLICUTLET/: slicutlet.h
python/: README.md  meson.build  meson_options.txt  slicutletmodule.c
python/extensions/: extension_ab.c  extension_ma.c  extension_mb.c  extension_mc.c
python/slicutlet/: __init__.py  _slicutlet.pyx
python/tests/: test_ab01nd.py  test_ab04md.py  test_ab05md.py  test_ab05nd.py  test_ab07nd.py  test_ma01xx.py  test_ma02bd.py  test_ma02xx.py  test_mb01pd.py  test_mb01qd.py  test_mb01xx.py  test_mb03oy.py  test_mc01td.py
src/A/: ab01nd.c  ab07nd.c
src/AB/: ab01nd.c  ab04md.c  ab05md.c  ab05nd.c  ab07nd.c
src/B/: test_slicutlet.c
src/M/: ma01bz.c  ma01dd.c  ma01dz.c  ma02ad.c  ma02az.c  ma02bz.c  ma02cd.c  ma02cz.c  ma02dd.c  ma02es.c  ma02fd.c  ma02gd.c  ma02gz.c  ma02id.c  ma02iz.c  ma02jz.c  ma02md.c  mb01pd.c  mb01qd.c  mb03oy.c  mc01td.c
src/MA/: ma01ad.c  ma01bd.c  ma01cd.c  ma02bd.c  ma02ed.c  ma02es.c  ma02ez.c  ma02gd.c  ma02gz.c  ma02hd.c  ma02hz.c  ma02iz.c  ma02jd.c  ma02mz.c  ma02nz.c  ma02od.c  ma02oz.c  ma02pd.c  ma02pz.c  ma02rd.c  ma02sd.c
src/MB/: mb01ld.c  mb01od.c  mb01oe.c  mb01oh.c  mb01os.c  mb01rb.c  mb01rh.c  mb01ss.c  mb01ud.c  mb01uw.c  mb01uz.c  mb01vd.c  mb01wd.c  mb03oy.c
src/include/: slc_blaslapack.h  slc_config.h.in  types.h
tools/: README.md
