# Meson project options

# Use ILP64 BLAS/LAPACK interface (64-bit integers for sizes at the BLAS/LAPACK boundary)
option('ilp64', type: 'boolean', value: false,
  description: 'Use ILP64 BLAS/LAPACK interface (64-bit integers for sizes)')

# Build Python extension module
option('python', type: 'boolean', value: false,
  description: 'Build Python extension module with Cython bindings')
